[gd_scene load_steps=12 format=3 uid="uid://cphm13yhxemob"]

[ext_resource type="Texture2D" uid="uid://b1qvy1ra8akvx" path="res://Assets/sprites/player/goal.png" id="1_ojolh"]
[ext_resource type="Script" path="res://Scripts/UI/PauseMenuController.gd" id="1_xcm24"]
[ext_resource type="FontFile" uid="uid://ba12ijup4tb8f" path="res://Assets/Font/ThaleahFat.ttf" id="3_55vn3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhyr7"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.215902, 0.215902, 0.215902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
shadow_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="Theme" id="Theme_ilkfb"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_hhyr7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l2bix"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5kqre"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ukq4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eyu3t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0akm"]

[sub_resource type="Theme" id="Theme_h3iqj"]
default_font = ExtResource("3_55vn3")
default_font_size = 70
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0.183589, 0.183591, 0.183591, 1)
Button/colors/font_hover_pressed_color = Color(0.52549, 0.52549, 0.52549, 1)
Button/colors/font_pressed_color = Color(0.525101, 0.525101, 0.525101, 1)
Button/colors/icon_focus_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 60
Button/fonts/font = ExtResource("3_55vn3")
Button/styles/disabled = SubResource("StyleBoxEmpty_l2bix")
Button/styles/focus = SubResource("StyleBoxEmpty_5kqre")
Button/styles/hover = SubResource("StyleBoxEmpty_0ukq4")
Button/styles/normal = SubResource("StyleBoxEmpty_eyu3t")
Button/styles/pressed = SubResource("StyleBoxEmpty_n0akm")

[node name="CenterContainer" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xcm24")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = SubResource("Theme_ilkfb")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 200
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_ojolh")
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_h3iqj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Restart"

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_h3iqj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Resume"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_h3iqj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Quit"

[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer/restart" to="." method="_on_restart_button_up"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/restart" to="." method="_on_restart_mouse_entered"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer/resume" to="." method="_on_resume_button_up"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/resume" to="." method="_on_resume_mouse_entered"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer/quit" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/HBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
